# graceful-terminator

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  gt-application.c  gt-application.h  gt-close-dialog.c  gt-close-dialog.h  gt-config.h  gt-context-menu.c  gt-context-menu.h  gt-enums.c  gt-enums.h  gt-log.c  gt-log.h  gt-marshals.c  gt-marshals.h  gt-pages.c  gt-pages.h  gt-pages.ui  gt-process.c  gt-process.h  gt-proxy-info.c  gt-proxy-info.h  gt-resources.c  gt-resources.h  gt-settings.c  gt-settings.h  gt-simple-tab.c  gt-simple-tab.h  gt-simple-tab.ui  gt-tab-button.c  gt-tab-button.h  gt-tab-button.ui  gt-tab-switcher-row.c  gt-tab-switcher-row.h  gt-tab-switcher-row.ui  gt-tab-switcher.c  gt-tab-switcher.h  gt-tab-switcher.ui  gt-tab.c  gt-tab.h  gt-tab.ui  (+22 more)
app/data/: data.cmake  org.freedesktop.FileManager1.xml  org.graceful.Terminator.desktop  org.graceful.Terminator.gschema.xml  org.graceful.Terminator.metainfo.xml  org.graceful.Terminator.service
extensions/: CMakeLists.txt
extensions/nautilus4/: CMakeLists.txt  menu-module.c  menu-terminator.c  menu-terminator.h  nautilus-menu-module.c  nautilus-menu-provider.c  nautilus-menu-provider.h
